# dashboard

./: CMakeLists.txt  README.md  io.github.duh-dashboard.Dashboard.yml  io.github.duh_dashboard.Dashboard.yml
.github/workflows/: ci.yml
resources/: dashboard.desktop  dashboard.qrc  theme.qss
src/: main.cpp
src/app/: DashboardApp.cpp  DashboardApp.h
src/core/: ConfigStore.cpp  ConfigStore.h  LayoutEngine.cpp  LayoutEngine.h  PluginLoader.cpp  PluginLoader.h  WidgetDataStore.cpp  WidgetDataStore.h  WidgetManager.cpp  WidgetManager.h
src/ui/: AddWidgetDialog.cpp  AddWidgetDialog.h  DashboardWindow.cpp  DashboardWindow.h  SettingsDialog.cpp  SettingsDialog.h  TitleBar.cpp  TitleBar.h  WidgetCanvas.cpp  WidgetCanvas.h  WidgetFrame.cpp  WidgetFrame.h
